--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,11 +3,13 @@ site_name: FreeA7's Site
 nav:
 - "About me": index.md
 - "Share konwledge":
-  - "backend":
+  - "Algorithms":
+    - "Red Black Tree": shareknowledge/Algorithms/red_black_tree.md
+  - "Backend":
     - "nginx":
-      - "install Openssl": shareknowledge/backend/nginx/install_openssl.md
-      - "install Pcre & Zlib": shareknowledge/backend/nginx/install_pcre_zlib.md
-      - "install Nginx": shareknowledge/backend/nginx/install_nginx.md
+      - "install Openssl": shareknowledge/Backend/nginx/install_openssl.md
+      - "install Pcre & Zlib": shareknowledge/Backend/nginx/install_pcre_zlib.md
+      - "install Nginx": shareknowledge/Backend/nginx/install_nginx.md
 
 theme:
   name: 'material'
