增加孙可相关文章;增加备案号链接到工信部网站;增加看板娘OC

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,9 @@ nav:
 - "About me": index.md
 - "About her":
   - "2021/11/01": abouther/20211101.md
+  - "2021/11/02": abouther/20211102.md
+  - "2021/11/03": abouther/20211103.md
+  - "2021/11/04": abouther/20211104.md
 - "Causeries":
   - "写在前边": causeries/写在前边.md
   - "A7观察":
