增加孙可相关文章05-08

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,10 @@ nav:
   - "2021/11/02": abouther/20211102.md
   - "2021/11/03": abouther/20211103.md
   - "2021/11/04": abouther/20211104.md
+  - "2021/11/05": abouther/20211105.md
+  - "2021/11/06": abouther/20211106.md
+  - "2021/11/07": abouther/20211107.md
+  - "2021/11/08": abouther/20211108.md
 - "Causeries":
   - "写在前边": causeries/写在前边.md
   - "A7观察":
