增加孙可相关文章09 10

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,8 @@ nav:
   - "2021/11/06": abouther/20211106.md
   - "2021/11/07": abouther/20211107.md
   - "2021/11/08": abouther/20211108.md
+  - "2021/11/09": abouther/20211109.md
+  - "2021/11/10": abouther/20211110.md
 - "Causeries":
   - "写在前边": causeries/写在前边.md
   - "A7观察":
