增加孙可相关文章11 12

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,8 @@ nav:
   - "2021/11/08": abouther/20211108.md
   - "2021/11/09": abouther/20211109.md
   - "2021/11/10": abouther/20211110.md
+  - "2021/11/11": abouther/20211111.md
+  - "2021/11/12": abouther/20211112.md
 - "Causeries":
   - "写在前边": causeries/写在前边.md
   - "A7观察":
