--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ nav:
   - "2021/11/10": abouther/20211110.md
   - "2021/11/11": abouther/20211111.md
   - "2021/11/12": abouther/20211112.md
+  - "2021/11/13": abouther/20211113.md
 - "Causeries":
   - "写在前边": causeries/写在前边.md
   - "A7观察":
