增加孙可相关文章14

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ nav:
   - "2021/11/11": abouther/20211111.md
   - "2021/11/12": abouther/20211112.md
   - "2021/11/13": abouther/20211113.md
+  - "2021/11/14": abouther/20211114.md
 - "Causeries":
   - "写在前边": causeries/写在前边.md
   - "A7观察":
