--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
   - "2021/11/14": abouther/20211114.md
   - "2021/11/15": abouther/20211115.md
   - "2021/11/16": abouther/20211116.md
+  - "2021/11/17": abouther/20211117.md
 - "Causeries":
   - "写在前边": causeries/写在前边.md
   - "A7观察":
