增加孙可相关文章18

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
   - "2021/11/15": abouther/20211115.md
   - "2021/11/16": abouther/20211116.md
   - "2021/11/17": abouther/20211117.md
+  - "2021/11/18": abouther/20211118.md
 - "Causeries":
   - "写在前边": causeries/写在前边.md
   - "A7观察":
