增加孙可相关文章19

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ nav:
   - "2021/11/16": abouther/20211116.md
   - "2021/11/17": abouther/20211117.md
   - "2021/11/18": abouther/20211118.md
+  - "2021/11/19": abouther/20211119.md
 - "Causeries":
   - "写在前边": causeries/写在前边.md
   - "A7观察":
