增加孙可相关文章21 22

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,8 @@ nav:
   - "2021/11/18": abouther/20211118.md
   - "2021/11/19": abouther/20211119.md
   - "2021/11/20": abouther/20211120.md
+  - "2021/11/21": abouther/20211121.md
+  - "2021/11/22": abouther/20211122.md
 - "Causeries":
   - "写在前边": causeries/写在前边.md
   - "A7观察":
