增加孙可相关文章24

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
   - "2021/11/21": abouther/20211121.md
   - "2021/11/22": abouther/20211122.md
   - "2021/11/23": abouther/20211123.md
+  - "2021/11/24": abouther/20211124.md
 - "Causeries":
   - "写在前边": causeries/写在前边.md
   - "A7观察":
