--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ nav:
   - "2021/11/23": abouther/20211123.md
   - "2021/11/24": abouther/20211124.md
   - "2021/11/25": abouther/20211125.md
+  - "2021/11/26": abouther/20211126.md
 - "Causeries":
   - "写在前边": causeries/写在前边.md
   - "A7观察":
