增加孙可相关文章27-30

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,10 @@ nav:
   - "2021/11/24": abouther/20211124.md
   - "2021/11/25": abouther/20211125.md
   - "2021/11/26": abouther/20211126.md
+  - "2021/11/27": abouther/20211127.md
+  - "2021/11/28": abouther/20211128.md
+  - "2021/11/29": abouther/20211129.md
+  - "2021/11/30": abouther/20211130.md
 - "Causeries":
   - "写在前边": causeries/写在前边.md
   - "A7观察":
